# AutoML

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  model.json  package-lock.json  pyproject.toml  seaweedfs-config.json
.github/workflows/: build_admin_be.yaml  build_classical_modeling_node.yaml  build_data_profiling_node.yaml  build_deployment_service.yaml  build_feature_engineering_node.yaml  build_feature_selection_node.yaml  build_llm_service.yaml  build_nas_modeling_node.yaml  build_user_be.yaml  build_user_fe.yaml  cd.yaml  test_admin_be.yaml  test_classical_modeling_node.yaml  test_data_profiling_node.yaml  test_llm_service.yaml  (+5 more)
apps/: .env.example  .gitignore  docker-compose.yaml  docker-compose.yml
apps/data-profiling-node/: .gitignore  .pre-commit-config.yaml  9ac7929a-a5d1-4505-b301-fca996ea2f23.csv.html  Customer Data.html  Dockerfile  Iris Data.html  Iris_Flowers_100.csv.html  README.md  cleaned.csv.html  main.py  mypy.ini  pyproject.toml  requirements.txt  test_event.json  test_event.py  test_event2.json
apps/data-profiling-node/src/: consumer.py  dependencies.py  main.py  producer.py  profiler.py
apps/data-profiling-node/src/data_utils/: __init__.py  schemas.py
apps/data-profiling-node/src/profilers/: column_profiling.py  data_set_profiling.py  profiler_ydata.py
apps/data-profiling-node/src/services/: profiling_service.py  s3_service.py  storage_service.py
apps/data-profiling-node/src/templates/: dataset_profiling.txt
apps/data-profiling-node/src/utils/: column_profiling.py  data_set_profiling.py
apps/data-profiling-node/tests/: dummy_test.py
front-end/: package-lock.json  package.json
(+234 files in other folders)
