[project]
name = "data-profiling-node"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "jsonschema>=4.23.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pika>=1.3.2",
    "pre-commit>=4.2.0",
    "uvicorn>=0.34.2",
]
