[project]
name = "data-profiling-node"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "jsonschema>=4.23.0",
    "mypy>=1.15.0",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pika>=1.3.2",
    "pre-commit>=4.2.0",
    "pyright>=1.1.400",
    "ruff>=0.11.9",
    "scipy>=1.15.3",
    "seaweeds3client",
    "setuptools>=80.8.0",
    "types-pika>=1.2.0b1",
    "uvicorn>=0.34.2",
    "ydata-profiling>=4.16.1",
]

[tool.pyright]
pythonVersion = "3.11" 
venvPath = "."
venv = ".venv"

[tool.uv.sources]
seaweeds3client = { git = "https://github.com/WildCayote/AutoML.git", subdirectory = "common/python/SeaweedS3Client" }
